<resources>
    <string name="app_name">Flickr Droid</string>
    <string name="intro_version_1_10">Hello! Spring is coming and it is time to take off your logo cap! 🙂 \n\nIf you find a bug, please report it in detail to supflickrdroid@gmail.com\n\nAnd if you liked the APP, please support it by rating it.\n\nThank you!</string>
    <string name="intro_version_2_0">Hello!\n\nMeet version 2.0! This version has faster photo loading, redesigned interface, added search filters, fixed bugs and much more! You can find the full list of changes in the \"About\" section.\n\nIf you have any bugs/suggestions please contact me by supflickrdroid@gmail.com\n\nIf you like the app, please support it by rating it on Google Play!\n\nThank you!</string>
    <string name="intro_version_2_1">Hello!\n\nThis app is still free and ad-free. So please do not rate it with one star if you technical problems.\n\nThis is NOT an official Flickr app. Flickr can revoke permission to access its photo database at any time. So if you have any problems, write to me at supflickrdroid@gmail.com. Respect the developer\'s work!\n\nOn the contrary, I ask you to support the app and rate it in Google Play. This increases my motivation to support the app.\n\nThank you all very much for your feedback!</string>
    <string name="intro_header1">Hello!</string>
    <string name="intro_description1">The application supports 2 modes of operation, with and without authorization</string>
    <string name="intro_header2">Authorization</string>
    <string name="intro_header3">Main menu</string>
    <string name="intro_description2">✓ access to personal page\n
        ✓ add / delete comments\n
        ✓ add / delete favorites photos\n
        ✓ add photos to albums / groups
        \n✓ photo privacy control\n

       </string>
    <string name="intro_description3">You can always log in by pulling out the main menu on the right and clicking on the avatar. After authorization, clicking on the avatar will open your personal page.</string>
    <string name="intro_header4">Flexible search</string>
    <string name="intro_description4">1 - best photos for a specific date\n2 - search photos, groups, users\n3 - search photos on the map\n4 - search photos by categories</string>
    <string name="intro_header5">Search on the map</string>
    <string name="intro_description5">Pull up on the logo antenna to slide out the settings panel. If necessary, the photo can be moved by holding your finger on it</string>
    <string name="intro_header6">Photo Information</string>
    <string name="intro_description6">Pull the shutter up to see additional information about the photo</string>
    <string name="intro_header7">Google Maps</string>
    <string name="intro_description7">"Click on the marker on the map to show the location of the photo in Google Maps</string>
    <string name="intro_header8">Link to Flickr.com</string>
    <string name="intro_description8">Clicking on a profile photo (group, album, etc.) will open the current page based on the active tab at Flickr.com in the browser</string>
    <string name="intro_header9">Camera Roll</string>
    <string name="intro_description9">Here you can change the privacy of your photos or select photos to add them to an album or group</string>
    <string name="intro_header10">Deleting comments</string>
    <string name="intro_description10">Swipe a comment to the left to delete it.</string>
    <string name="intro_header11">Thank you!</string>
    <string name="intro_description11">If you like the app, please support it by rating it</string>
    <string name="intro_header12">Search filters</string>
    <string name="intro_description12">Try alternative search filters. Relevant is set by default.</string>
    <string name="IntroSkip">Skip!</string>
    <string name="login">Log in</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="introFinish">GO!</string>
    <string name="sing_in">Log in</string>
    <string name="sing_in_later">Not now</string>
    <string name="search_top">Best photos</string>
    <string name="search_recent">Recent photos</string>
    <string name="search_on_map_button_text">Search on map %d photos</string>
    <string name="search_on_map">Search on the map</string>
    <string name="search_on_map_near_me">Search near me</string>
    <string name="data">20\nDEC\n2020</string>
    <string name="people">People</string>
    <string name="person">User</string>
    <string name="photo">Photos</string>
    <string name="groups">Groups</string>
    <string name="date_dialog_title">Best photos for:</string>
    <string name="search_date_title_result">""</string>
    <string name="pro_flag">PRO</string>
    <string name="search_photo_hint">Title, description or tags </string>
    <string name="search_user_hint">Username or e-mail</string>
    <string name="search_group_hint">Name</string>
    <string name="comment_delete_error">you don\'t have permission to delete this comment</string>
    <string name="internet_connection_error">Oops! Something went wrong. Please try again later</string>
    <string name="no_internet_connection_error">No connection to Flickr.com\nPlease check your Internet connection</string>
    <string name="time_out_error">Waiting too long for a response from Flickr.com\nTry refreshing the page</string>
    <string name="request_error">Oops! That page can\'t be found. Try a different search</string>
    <string name="search_photos_error">Oops!\nPhotos not found. Try a different search</string>
    <string name="search_groups_error">Oops!\nGroups not found. Try a different search</string>
    <string name="map_request_error">Oops! There are no photos here.\nTry a different search</string>
    <string name="search_user_error">Oops! No such user could be found. As a reminder, you can only search by exact username or email. Try a different search</string>
    <string name="photos_error">Oops! There are no photos here</string>
    <string name="interestings_photos_error">Looks like Flickr.com has not prepared any photos for this date yet. Try to choose a date earlier</string>
    <string name="user_has_no_photos_error">This user has no public photos</string>
    <string name="user_has_no_favorites_photos_error">This user has no favorites photos</string>
    <string name="user_has_no_followings_error">This user has no followings</string>
    <string name="user_has_no_albums_error">This user has no albums</string>
    <string name="user_has_no_galleries_error">This user has no galleries</string>
    <string name="group_has_private_photos_error">You are not in this group. The group has private photos</string>
    <string name="user_has_no_groups_error">This user is not a member of any group</string>
    <string name="no_comments">There are no comments yet</string>
    <string name="data_receive_fail">Data receive failed. Please try again later</string>
    <string name="internet_connection_error_map">Something went wrong</string>
    <string name="request_error_map">Bad request</string>
    <string name="public_photos">Public photos</string>
    <string name="location">Location</string>
    <string name="first_posted_photo_date">First photo posted</string>
    <string name="members">Members</string>
    <string name="photos">Photos</string>
    <string name="topics">Discussions</string>
    <string name="views">Views</string>
    <string name="group_list_private">P\nR\nI\nV\nA\nT\nE</string>
    <string name="group_list_invite">I\nN\nV\nI\nT\nE</string>
    <string name="group_list_public">P\nU\nB\nL\nI\nC</string>
    <string name="group_text_private">private</string>
    <string name="group_text_invite">invite</string>
    <string name="group_text_public">public</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="GPS_OFF_warning">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="location_access_deny_warning">To search for photos near your geolocation, you need to allow Flickr Droid to access this device\'s location. Open app settings for this?</string>
    <string name="worldwide">Worldwide</string>
    <string name="near_me">Near me</string>
    <string name="cancel">Cancel</string>
    <string name="download_start">Download started…</string>
    <string name="search_blank_warning">Search field must not be blank.</string>
    <string name="user_public">Public</string>
    <string name="user_albums">Albums</string>
    <string name="user_groups">Groups</string>
    <string name="user_galleries">Galleries</string>
    <string name="user_favorites">Favorites</string>
    <string name="user_about">About</string>
    <string name="user_camera_roll">Camera Roll</string>
    <string name="original_link">Original link:\n</string>
    <string name="photo_privacy_public">Public</string>
    <string name="photo_privacy_private">Private</string>
    <string name="photo_privacy_friends">Friends</string>
    <string name="photo_privacy_family">Family</string>
    <string name="photo_privacy_family_friends">Friends and Family</string>
    <string name="group_photos">Photo</string>
    <string name="group_description">Description</string>
    <string name="storage_access_warning">To share a photo, you first need to download it to your device, and this requires permission to access the storage.</string>
    <string name="download_access_warning">In order to download photos to the device, you must allow access to the storage.</string>
    <string name="slide_show_started">Slide show started with %d sec. interval.To stop tap the screen</string>
    <string name="slide_show_stopped">Slide show stopped</string>
    <string name="comments">Comments</string>
    <string name="date">Created</string>
    <string name="contacts">Contacts</string>
    <string name="personal_page_followings">Followings</string>
    <string name="personal_page_favorites">Favorites</string>
    <string name="personal_page_cameraRoll">Camera Roll</string>
    <string name="personal_page_public">Public</string>
    <string name="personal_page_albums">Albums</string>
    <string name="personal_page_gallery">Gallery</string>
    <string name="personal_page_groups">Groups</string>
    <string name="personal_page_about">About</string>
    <string name="years_ago">years ago</string>
    <string name="years_2_4_ago">years ago</string>
    <string name="gallery_view">Gallery view type</string>
    <string name="quality_640_small">640\nSmall</string>
    <string name="quality_1024_medium">1024\nMedium</string>
    <string name="quality_2048_large">2048\nLarge</string>
    <string name="download_picture_quality">Quality of downloaded photos</string>
    <string name="max_quality">Max\n quality</string>
    <string name="slide_show_duration">Slide show duration</string>
    <string name="slideshow_3_sec">3 sec</string>
    <string name="slideshow_4_sec">4 sec</string>
    <string name="slideshow_5_sec">5 sec</string>
    <string name="slideshow_10_sec">10 sec</string>
    <string name="slideshow_15_sec">15 sec</string>
    <string name="theme">Theme</string>
    <string name="default_theme">Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy (operated by Flickr.com)</string>
    <string name="history_switch">Save search history</string>
    <string name="redirect_to_flickr_message">https://www.flickr.com</string>
    <string name="oauth_title">Redirect to:</string>
    <string name="please_wait">Please wait…</string>
    <string name="back_to_app">Back to App</string>
    <string name="settings">Settings</string>
    <string name="cache_size_tap_to_clear">Cache size (tap to clear)</string>
    <string name="menu">menu</string>
    <string name="calendar">calendar</string>
    <string name="search">Search</string>
</resources>