<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/icon_home_arrow_user_page_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:contentInsetStartWithNavigation="0dp"
            app:title="@string/settings"
            android:theme="@style/CommonMenuStyle"
            />

        <include layout="@layout/divider_horizontal"/>

    </com.google.android.material.appbar.AppBarLayout>


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/titleTextColor"
            android:text="@string/gallery_view"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settings_1_in_row_button"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_icon_1_view"/>

            <ImageView
                android:id="@+id/settings_2_in_row_button"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_icon_2_view"/>

            <ImageView
                android:layout_marginStart="30dp"
                android:id="@+id/settings_3_in_row_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_icon_3_view"/>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="?attr/subtitleTextColor"/>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:text="@string/picture_show_quality"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="?attr/titleTextColor"/>-->

<!--            <LinearLayout-->
<!--                android:paddingTop="10dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->


<!--                <Button-->
<!--                    android:id="@+id/picture_quality_640_button"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:background="@drawable/settings_default_background"-->
<!--                    android:text="@string/quality_640_small"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="?attr/titleTextColor"/>-->

<!--                <Button-->
<!--                    android:id="@+id/picture_quality_1024_button"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:background="@drawable/settings_default_background"-->
<!--                    android:text="@string/quality_1024_medium"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="?attr/titleTextColor"/>-->

<!--                <Button-->
<!--                    android:id="@+id/picture_quality_2048_button"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:layout_marginBottom="10dp"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:background="@drawable/settings_default_background"-->
<!--                    android:text="@string/quality_2048_large"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="?attr/titleTextColor"/>-->

<!--            </LinearLayout>-->

<!--            <View-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0.3dp"-->
<!--                android:background="?attr/subtitleTextColor"/>-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/download_picture_quality"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/titleTextColor"/>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/photo_download_640_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/quality_640_small"
                    android:textSize="12sp"
                    android:foregroundTint="?attr/colorAccent"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/photo_download_1024_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/quality_1024_medium"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/photo_download_2048_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/quality_2048_large"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/photo_download_max_button"
                    android:textAllCaps="false"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/max_quality"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="?attr/titleTextColor"/>

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="?attr/subtitleTextColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/slide_show_duration"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/titleTextColor"/>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/slideshow_3_sec_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/slideshow_3_sec"
                    android:textSize="12sp"
                    android:background="@drawable/settings_default_background"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/slideshow_4_sec_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/slideshow_4_sec"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/slideshow_5_sec_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/slideshow_5_sec"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/slideshow_10_sec_button"
                    android:textAllCaps="false"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/slideshow_10_sec"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/slideshow_15_sec_button"
                    android:textAllCaps="false"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/slideshow_15_sec"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:textColor="?attr/titleTextColor"/>

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="?attr/subtitleTextColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/theme"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/titleTextColor"/>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/theme_default_button"
                    android:textAllCaps="false"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="@string/default_theme"
                    android:textSize="12sp"
                    android:background="@drawable/settings_default_background"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/theme_light_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/light"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>

                <Button
                    android:id="@+id/theme_dark_button"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:background="@drawable/settings_default_background"
                    android:text="@string/dark"
                    android:textSize="12sp"
                    android:textColor="?attr/titleTextColor"/>
            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="?attr/subtitleTextColor"/>

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/history_switch"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textDirection="locale"
            android:textColor="?attr/titleTextColor"
            android:text="@string/history_switch"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="?attr/subtitleTextColor"/>

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/cash_switch"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="?attr/titleTextColor"-->
<!--            android:text="@string/cash_switch"/>-->

<!--        <View-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.3dp"-->
<!--            android:background="?attr/subtitleTextColor"/>-->

        <FrameLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/titleTextColor"
                android:text="@string/cache_size_tap_to_clear"/>

            <TextView
                android:id="@+id/cache_size_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/titleTextColor"
                android:layout_gravity="end"
                android:textSize="16sp"
                tools:text="200 МБ"
                android:textAlignment="viewEnd">
            </TextView>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_marginEnd="20dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="end|center" />
        </FrameLayout>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="?attr/subtitleTextColor"/>

        <TextView
            android:id="@+id/about_text_view"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/titleTextColor"
            android:text="@string/about"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="?attr/subtitleTextColor"/>

        <TextView
            android:id="@+id/privacy_policy_view"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/titleTextColor"
            android:text="@string/privacy_policy"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="?attr/subtitleTextColor"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>

</LinearLayout>